feature: add pause method

--- a/src/main/resources/window_style.css
+++ b/src/main/resources/window_style.css
@@ -70,3 +70,18 @@
     -fx-fill: yellow;
     -fx-text-fill: yellow;
 }
+
+.pauseStyle {
+    -fx-font-family: "Let's go Digital";
+    -fx-font-size: 48;
+    -fx-fill: red;
+    -fx-effect: dropshadow(gaussian, black, 2, 1.0, 1, 1);
+}
+
+.buttonStyle {
+    -fx-font-family: "Let's go Digital";
+    -fx-font-size: 38;
+    -fx-fill: #61a2b1;
+    -fx-text-fill: #61a2b1;
+
+}
