feat: add next shape display method

--- a/src/main/resources/gameLayout.fxml
+++ b/src/main/resources/gameLayout.fxml
@@ -14,12 +14,14 @@
             <GridPane fx:id="gamePanel" hgap="1" vgap="1" layoutY="30" layoutX="40"/>
         </center>
     </BorderPane>
+    <GridPane fx:id="nextBrickPanel" layoutX="235" layoutY="100" hgap="1" vgap="1" styleClass="nextBrick" />
 
     <Group fx:id="groupNotification" layoutX="14" layoutY="203">
         <VBox alignment="CENTER">
             <GameOverPanel fx:id="gameOverPanel"/>
         </VBox>
     </Group>
+
     <stylesheets>
         <URL value="@window_style.css"/>
     </stylesheets>
