--- a/src/main/resources/window_style.css
+++ b/src/main/resources/window_style.css
@@ -22,12 +22,6 @@
     -fx-alignment: right;
 }
 
-.nextBrickText {
-    -fx-font-family: "Let's go Digital";
-    -fx-font-size: 20px;
-    -fx-fill: yellow;
-}
-
 .ipad-dark-grey {
     -fx-background-color: linear-gradient(#686868 0%, #232723 25%, #373837 75%, #757575 100%),
     linear-gradient(#020b02, #3a3a3a),
@@ -71,7 +65,7 @@
     -fx-background-color: red;
 }
 
-.scoreClass{
+.textStyle{
     -fx-font-family: "Let's go Digital";
     -fx-font-size: 20;
     -fx-fill: yellow;
