feature: add high score display method

--- a/src/main/resources/gameLayout.fxml
+++ b/src/main/resources/gameLayout.fxml
@@ -14,6 +14,7 @@
             <GridPane fx:id="gamePanel" hgap="1" vgap="1" layoutY="30" layoutX="40"/>
         </center>
     </BorderPane>
+    <Text fx:id="highScoreText" text="HIGH SCORE: 0" styleClass="textStyle"/>
     <GridPane fx:id="nextBrickPanel" layoutX="235" layoutY="100" hgap="1" vgap="1" styleClass="nextBrick" />
 
     <Group fx:id="groupNotification" layoutX="14" layoutY="203">
