--- a/src/main/resources/gameLayout.fxml
+++ b/src/main/resources/gameLayout.fxml
@@ -1,11 +1,10 @@
 <?import com.comp2042.panel.GameOverPanel?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ToggleButton?>
 <?import javafx.scene.Group?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Text?>
 <?import java.net.URL?>
+<?import com.comp2042.panel.CongratulationsPanel?>
+
 <Pane fx:controller="com.comp2042.controller.GuiController"
       xmlns:fx="http://javafx.com/fxml">
     <GridPane fx:id="brickPanel" vgap="1" hgap="1"/>
@@ -17,9 +16,10 @@
     <Text fx:id="highScoreText" text="HIGH SCORE: 0" styleClass="textStyle"/>
     <GridPane fx:id="nextBrickPanel" layoutX="235" layoutY="100" hgap="1" vgap="1" styleClass="nextBrick" />
 
-    <Group fx:id="groupNotification" layoutX="14" layoutY="203">
+    <Group fx:id="groupNotification" layoutX="14" layoutY="165">
         <VBox alignment="CENTER">
             <GameOverPanel fx:id="gameOverPanel"/>
+            <CongratulationsPanel fx:id="congratulationsPanel"/>
         </VBox>
     </Group>
 
